--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,15 @@ body {
   font-family: 'Inter', sans-serif;
   color: #0C1116;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 
 a {
   color: inherit;
