--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,7 +30,7 @@ a {
 }
 
 .subtitle {
-  color: #25273D;
+  color: #0b0b0b;
 }
 
 * {
@@ -63,7 +63,7 @@ p {
 
 span {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 160%;
   color: #787A9B;
 }
