--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #0C1116;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
