--- a/styles/globals.css
+++ b/styles/globals.css
@@ -192,3 +192,23 @@ span {
     transform: translateX(0);
   }
 }
+
+.MuiPickersPopper-paper {
+  background-color: #0C1620 !important;
+  box-shadow: 0px 4px 12px rgb(0 0 0 / 50%) !important;
+  border: 1px solid;
+  border-color: #373F47;
+}
+
+.MuiPickersPopper-paper .MuiPickersDay-root {
+  background-color: #000A0D;
+}
+
+.MuiPickersPopper-paper .MuiPickersDay-root.Mui-selected,
+.MuiPickersPopper-paper .MuiPickersDay-root.Mui-selected:hover {
+  background-color: #07E0E0 !important;
+}
+
+.MuiPickersPopper-paper .MuiDayPicker-weekDayLabel {
+  color: #ffffff;
+}
