--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,39 +4,150 @@
 }
 
 @font-face {
-  font-family: 'SamsungSharpSans';
-  src: url('/fonts/SamsungSharpSans/SamsungSharpSans.eot');
-  src: url('/fonts/SamsungSharpSans/SamsungSharpSans.eot?#iefix') format('embedded-opentype'),
-       url('/fonts/SamsungSharpSans/SamsungSharpSans.svg#SamsungSharpSans') format('svg'),
-       url('/fonts/SamsungSharpSans/SamsungSharpSans.ttf') format('truetype'),
-       url('/fonts/SamsungSharpSans/SamsungSharpSans.woff') format('woff'),
-       url('/fonts/SamsungSharpSans/SamsungSharpSans.woff2') format('woff2');
-  font-weight: normal;
+  font-family: "SamsungSharpSans";
   font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/samsungsharpsans.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'SamsungSharpSans-Bold';
-  src: url('/fonts/SamsungSharpSansBold/SamsungSharpSans-Bold.eot');
-  src: url('/fonts/SamsungSharpSansBold/SamsungSharpSans-Bold.eot?#iefix') format('embedded-opentype'),
-       url('/fonts/SamsungSharpSansBold/SamsungSharpSans-Bold.svg#SamsungSharpSans-Bold') format('svg'),
-       url('/fonts/SamsungSharpSansBold/SamsungSharpSans-Bold.ttf') format('truetype'),
-       url('/fonts/SamsungSharpSansBold/SamsungSharpSans-Bold.woff') format('woff'),
-       url('/fonts/SamsungSharpSansBold/SamsungSharpSans-Bold.woff2') format('woff2');
-  font-weight: normal;
+  font-family: "SamsungSharpSans";
   font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/samsungsharpsans-medium.woff") format("woff");
 }
 
 @font-face {
-  font-family: 'SamsungSharpSans-Medium';
-  src: url('/fonts/SamsungSharpSansMedium/SamsungSharpSans-Medium.eot');
-  src: url('/fonts/SamsungSharpSansMedium/SamsungSharpSans-Medium.eot?#iefix') format('embedded-opentype'),
-       url('/fonts/SamsungSharpSansMedium/SamsungSharpSans-Medium.svg#SamsungSharpSans-Medium') format('svg'),
-       url('/fonts/SamsungSharpSansMedium/SamsungSharpSans-Medium.ttf') format('truetype'),
-       url('/fonts/SamsungSharpSansMedium/SamsungSharpSans-Medium.woff') format('woff'),
-       url('/fonts/SamsungSharpSansMedium/SamsungSharpSans-Medium.woff2') format('woff2');
-  font-weight: normal;
+  font-family: "SamsungSharpSans";
   font-style: normal;
+  font-weight: 700;
+  src: url("/fonts/samsungsharpsans-bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 100;
+  src: url("/fonts/Poppins-Thin.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 100;
+  src: url("/fonts/Poppins-ThinItalic.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 200;
+  src: url("/fonts/Poppins-ExtraLight.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 200;
+  src: url("/fonts/Poppins-ExtraLightItalic.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 300;
+  src: url("/fonts/Poppins-Light.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 300;
+  src: url("/fonts/Poppins-LightItalic.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/Poppins-Regular.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 400;
+  src: url("/fonts/Poppins-Italic.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/Poppins-Medium.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 500;
+  src: url("/fonts/Poppins-MediumItalic.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  src: url("/fonts/Poppins-SemiBold.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 600;
+  src: url("/fonts/Poppins-SemiBoldItalic.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  src: url("/fonts/Poppins-Bold.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 700;
+  src: url("/fonts/Poppins-BoldItalic.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 800;
+  src: url("/fonts/Poppins-ExtraBold.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 800;
+  src: url("/fonts/Poppins-ExtraBoldItalic.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 900;
+  src: url("/fonts/Poppins-Black.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: italic;
+  font-weight: 900;
+  src: url("/fonts/Poppins-BlackItalic.ttf") format("ttf");
 }
 
 @font-face {
